--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -4,12 +4,13 @@
       <div class="image">
         <div class="img-wrap">
           <% #TODO 商品イメージ %>
-          <%= image_tag("no-image.png" , alt: @item.title) %>
+          <%= image_tag(@item.large_image , alt: @item.title) %>
         </div>
       </div>
       <div class="title">
         <% #TODO 商品タイトル %>
         仮タイトル
+        <%= @item.title %>
       </div>
       <%= render 'action' , item: @item %>
     </div>
@@ -18,6 +19,9 @@
         <h4 class="side-box-title">Haveしたユーザー</h4>
         <div class="side-box-body">
           <% # TODO Haveしたユーザー一覧 %>
+          <% @have_users.each do |user| %>
+           <%= link_to gravatar_for(user, size: 24 ), user %>
+          <% end %>
 
         </div>
       </div>
@@ -29,7 +33,7 @@
       </div>
       <div class="text-center">
         <% #TODO 正しいリンク先に %>
-        <%= link_to('楽天詳細ページへ', '#') %>
+        <%= link_to('楽天詳細ページへ', @item.detail_page_url ) %>
       </div>
     </div>
   </div>
