--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -22,7 +22,7 @@
       <li>
         <div class="status-label">WANT</div>
         <div id="want_count" class="status-value">
-          789
+          <%= user.want_items.count %>
         </div>
       </li>
       <li>
