--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -28,7 +28,7 @@
       <li>
         <div class="status-label">HAVE</div>
         <div id="have_count" class="status-value">
-          123
+          <%= user.have_items.count %>
         </div>
       </li>
     </ul>
