--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,3 +1,8 @@
+<% content_for :head do %>
+  <title><%= @item.title %>- monolist</title>
+  <meta name="description" content="<%= @item.title %>に関する情報です。この商品を欲しい人、持ってる人を表示しています。">
+<% end %>
+
 <div class="container">
   <div class="container-inner inner-sm clearfix">
     <div class="item-single-main">
@@ -29,6 +34,9 @@
         <h4 class="side-box-title">Wantしたユーザー</h4>
         <div class="side-box-body">
           <% # TODO Wantしたユーザー一覧 %>
+            <% @want_users.each do |user| %>
+           <%= link_to gravatar_for(user, size: 24 ), user %>
+          <% end %>
         </div>
       </div>
       <div class="text-center">
